# bucket

./: LICENSE  README.md  pyproject.toml
docs/: Backlog.md  Command-Line.md
docs/Design/: Overview.md  README.md
docs/Design/Backend/: README.md
docs/Design/Metadata/: Metadata-Validator.md  Metadata.md
docs/Design/Plugins/: Configuration.md  Discovery.md  Examples.md  Install.md  README.md  Usage.md
src/bucket/: __about__.py
src/bucket/backends/: core.py
src/bucket/core/: registry.py
