[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucket"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "dev", email = "dev@local" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dev/bucket#readme"
Issues = "https://github.com/dev/bucket/issues"
Source = "https://github.com/dev/bucket"

[tool.hatch.version]
path = "src/bucket/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bucket tests}"

[tool.coverage.run]
source_pkgs = ["bucket", "tests"]
branch = true
parallel = true
omit = [
  "src/bucket/__about__.py",
]

[tool.coverage.paths]
bucket = ["src/bucket", "*/bucket/src/bucket"]
tests = ["tests", "*/bucket/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
