[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bucket"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "dev", email = "dev4dojo@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dev4dojo/bucket#readme"
Issues = "https://github.com/dev4dojo/bucket/issues"
Source = "https://github.com/dev4dojo/bucket"

# [project.optional-dependencies]
# sqlite = ["sqlalchemy>=2.0"]
# s3 = ["boto3>=1.28"]
# gcs = ["google-cloud-storage>=2.0"]

[tool.hatch.version]
path = "src/bucket/__about__.py"

[tool.coverage.run]
source_pkgs = ["bucket"]
branch = true
parallel = true
omit = [
  "src/bucket/__about__.py",
]

[tool.coverage.paths]
bucket = ["src/bucket"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
